build/log/idf_py_stderr_output_49398
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:455:17: error: static declaration of 'initialize_sntp' follows non-static declaration
  455 |     static void initialize_sntp(void)
      |                 ^~~~~~~~~~~~~~~
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:16:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.h:52:6: note: previous declaration of 'initialize_sntp' with type 'void(void)'
   52 | void initialize_sntp(void);
      |      ^~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: In function 'initialize_sntp':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:461:9: warning: 'sntp_setoperatingmode' is deprecated: use esp_sntp_setoperatingmode() instead [-Wdeprecated-declarations]
  461 |         sntp_setoperatingmode(SNTP_OPMODE_POLL);
      |         ^~~~~~~~~~~~~~~~~~~~~
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.h:34:
/home/umesh_adwait/esp-idf/components/lwip/include/apps/esp_sntp.h:249:6: note: declared here
  249 | void sntp_setoperatingmode(u8_t operating_mode)
      |      ^~~~~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:462:9: warning: 'sntp_setservername' is deprecated: use esp_sntp_setservername() instead [-Wdeprecated-declarations]
  462 |         sntp_setservername(0, "pool.ntp.org");
      |         ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/components/lwip/include/apps/esp_sntp.h:263:6: note: declared here
  263 | void sntp_setservername(u8_t idx, const char *server)
      |      ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:463:9: warning: 'sntp_init' is deprecated: use esp_sntp_init() instead [-Wdeprecated-declarations]
  463 |         sntp_init();
      |         ^~~~~~~~~
/home/umesh_adwait/esp-idf/components/lwip/include/apps/esp_sntp.h:269:6: note: declared here
  269 | void sntp_init(void)
      |      ^~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: At top level:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:468:17: error: static declaration of 'wait_for_time_sync' follows non-static declaration
  468 |     static void wait_for_time_sync(void)
      |                 ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.h:53:6: note: previous declaration of 'wait_for_time_sync' with type 'void()'
   53 | void wait_for_time_sync();
      |      ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:468:17: warning: 'wait_for_time_sync' defined but not used [-Wunused-function]
  468 |     static void wait_for_time_sync(void)
      |                 ^~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:141: esp-idf/main/CMakeFiles/__idf_main.dir/network/wifi_config.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
